--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
 .swiper-pagination-bullet {
   width: 15px !important;
   height: 15px !important;
-  background-color: #f5382c !important;
+  /* background-color: #f5382c !important; */
 }
 
 /* Styles for Swiper buttons before 768px */
@@ -32,7 +32,7 @@ body {
   color: #ffffff;
   padding: 8px 12px;
   font-size: 1.2rem !important;
-  background-color: #f5382c;
+  /* background-color: #f5382c; */
   border-radius: 100%;
   z-index: 100;
   margin-right: 50px;
@@ -43,7 +43,7 @@ body {
   color: #ffffff;
   padding: 8px 12px;
   font-size: 1rem !important;
-  background-color: #f5382c;
+  /* background-color: #f5382c; */
   border-radius: 100%;
   z-index: 100;
   margin-left: 30px;
