--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,53 @@ body {
   margin-left: 30px;
 }
 
+/* shipper  */
+.custom-placeholder .ant-select-selection-placeholder {
+  color: #f39c12; /* Custom color */
+  font-size: 15px;
+  font-weight: 500;
+}
+
+/* Remove hover effect */
+/* Remove hover effect for Ant Design Select input */
+.ant-select:hover .ant-select-selector,
+.ant-input:hover {
+  border-color: inherit !important; /* Prevent border color change on hover */
+  box-shadow: none !important; /* Remove box-shadow on hover */
+}
+
+/* Remove focus effect when Ant Design Select input or Input is focused */
+.ant-select-focused .ant-select-selector,
+.ant-input:focus {
+  border-color: inherit !important; /* Prevent border color change on focus */
+  box-shadow: none !important; /* Remove box-shadow on focus */
+}
+
+.ant-checkbox-input:focus .ant-checkbox-input:hover {
+  border-color: inherit !important; /* Prevent border color change on hover */
+  box-shadow: none !important; /* Remove box-shadow on hover */
+}
+
+/* Style checkbox with a specific class */
+.my-checkbox .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: rgb(35, 37, 92) !important;
+  border: none !important;
+}
+/* Disable hover effect on the checkbox */
+.my-checkbox:hover .ant-checkbox-input {
+  border-color: inherit !important; /* Prevent border color change on hover */
+  box-shadow: none !important; /* Remove box-shadow on hover */
+}
+
+/* Also disable hover effects for the label if necessary */
+/* Disable hover effect on the checkbox */
+
+/* Also disable hover effects for the label if necessary */
+.my-checkbox:hover .ant-checkbox-inner {
+  border-color: inherit !important; /* Prevent border color change on hover */
+  background-color: none !important; /* Prevent background color change on hover */
+}
+
 /* Add this to your CSS file */
 .placeholder-semibold::placeholder {
   @apply font-semibold;
