dispacting complete and others

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,3 +117,10 @@ body {
     margin-left: 0px; /* Reset margin-left to 0px */
   }
 }
+
+/* styles.css */
+@media (max-width: 560px) {
+  .custom-negative-margin {
+    margin-left: -4rem; /* Equivalent to -ml-16 */
+  }
+}
